k8s/ChatService/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serv-chat
  labels:
    app: serv-chat
spec:
  selector:
    app: serv-chat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
