k8s/ChatService/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serv-chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: victorahn.iptime.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serv-chat
            port:
              number: 80
